--- a/index.html
+++ b/index.html
@@ -4,4 +4,12 @@
         <meta charset="utf-8">  
         <link rel="stylesheet" href="">
     </head>
+    <body>
+        <body>
+            <h1>Homepage</h1>
+              <a href="https://www.theodinproject.com/about">click me</a>
+          
+              <a href="/pages/about.html">About</a>
+          </body>
+    </body>
 </html>
